fixed: navbar z-index

--- a/portifolio-frontend/src/components/navbar/Navbar.css
+++ b/portifolio-frontend/src/components/navbar/Navbar.css
@@ -95,9 +95,9 @@
         align-items: center;
         gap: 10px;
         padding: 40px 0;
+        z-index: 1000;
         transform: translateX(-140%);
         transition: transform 0.5s ease-in-out;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
 
     .nav-menu.open {
